changes not staged for commit

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
         "exampletext",
+        "formcheckbox",
+        "labeltext",
         "loginform",
         "registercard"
     ]
