added PAY DUES to navigation. needs icon

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "cSpell.words": [
         "makepayment",
-        "myrep"
+        "missedpayment",
+        "myrep",
+        "paiddues",
+        "paybtn",
+        "paycard",
+        "payhisttable"
     ]
 }
